Добавил документацию по загрузке файлов
