# app/Http/Actions/Api/Files/Upload/Action.php
@@ -12,10 +12,10 @@ class Action
 {
     public function __invoke(Request $request, FileManager $files)
     {
-        return FileResource::collection(array_map(function ($file) use ($files) {
+        return FileResource::collection(array_map(function ($file) use ($request, $files) {
             $indexed = true;
-            [$realpath, $url, $content] = $files->store($file->getContent(), $file->getExtension());
-            return new File(compact('realpath', 'url', 'indexed', 'content'));
+            [$id, $realpath, $url, $content] = $files->store($file->getContent(), $file->getClientOriginalExtension(), $request->has('field'));
+            return File::create(compact('id', 'realpath', 'url', 'indexed', 'content'));
         }, $request->file('files')));
     }
 }
